# CloudTunnelVis

./: README.md  pyproject.toml
nornir_data/: config.yaml  defaults.yaml  groups.yaml  hosts.yaml
scripts/: runbook.py  tunnel-dashboard-runner.py
shared_files/: command.txt
shared_files/configs/: vpn-rtr1.txt  vpn-rtr2.txt  vpn-rtr3.txt
